<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:labelFor="@+id/constraintLayout"
    tools:context="com.dmegyesi.vcipher.VCipherActivity">

    <LinearLayout
        android:id="@+id/vertLayout1"
        android:layout_width="0dp"
        android:layout_height="587dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/vertLayout1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/horizLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:labelFor="@+id/horizLayout1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textLabel"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:labelFor="@+id/textLabel"
                android:text="@string/text"
                android:textSize="16sp"
                tools:text="Text:" />

            <EditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:maxLength="30"
                android:inputType="textPersonName"
                android:labelFor="@+id/text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:labelFor="@+id/horizLayout2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/keyphraseLabel"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:labelFor="@+id/keyphraseLabel"
                android:text="@string/key_phrase"
                android:textSize="16sp"
                tools:text="Key Phrase:" />

            <EditText
                android:id="@+id/keyphrase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:maxLength="15"
                android:inputType="textPersonName"
                android:labelFor="@+id/keyphrase" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/encryptGroup"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="0"
            android:labelFor="@+id/encryptGroup"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/encrypt"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:checked="true"
                android:gravity="center_vertical"
                android:labelFor="@+id/encrypt"
                android:text="@string/encrypt"
                android:textSize="16sp"
                tools:text="Encrypt" />

            <RadioButton
                android:id="@+id/decrypt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:labelFor="@+id/decrypt"
                android:text="@string/decrypt"
                android:textSize="16sp"
                tools:text="Decrypt" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/horizLayout3"
            android:layout_width="wrap_content"
            android:layout_height="325dp"
            android:layout_gravity="center_horizontal"
            android:labelFor="@+id/horizLayout3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/runButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:labelFor="@+id/runButton"
                android:onClick="encryptOrDecryptUsingKeyphraseOnClick"
                android:text="@string/run"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:labelFor="@+id/horizLayout4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultsMainSectionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:labelFor="@+id/resultsMainSectionLabel"
                android:text="@string/results"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:text="Results" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizLayout5"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:labelFor="@+id/horizLayout5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultsMessageLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:labelFor="@+id/resultsMessageLabel"
                android:text="@string/result_message"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:longClickable="false"
                android:focusable="false"
                android:inputType="textMultiLine"
                android:labelFor="@+id/answer" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
